# GainsTracker

./: .gitignore  .python-version  README.md  manage.py  package-lock.json  pyproject.toml
GainsTracker/: asgi.py  settings.py  urls.py  wsgi.py
GainsTracker/templates/global/: menu.html
api/: schema.yaml  urls.py  views.py
exercises/: models.py  urls.py  views.py
exercises/migrations/: 0001_initial.py  0002_remove_exercise_pub_date.py
exercises/templates/: index.html
exercises/templates/exercises/: detail.html  index.html
programs/: models.py  tests.py  urls.py  views.py
programs/migrations/: 0001_initial.py
programs/templates/: index.html
programs/templates/programs/: detail.html  index.html
schedules/: admin.py  models.py
schedules/migrations/: 0001_initial.py  0002_scheduleexercise.py  0003_schedule_exercises.py  0004_alter_scheduleexercise_num_repetitions_and_more.py  0005_scheduleexerciseweights.py  0006_rename_scheduleexerciseweights_exerciseweights.py
sessions/: admin.py  apps.py  models.py
sessions/migrations/: 0001_initial.py  0002_rename_program_id_session_program.py  0003_remove_session_num_repetitions_and_more.py
ui/: README.md  index.html  jest.config.cjs  logo.psd  package-lock.json  package.json  playwright.config.ts  swagger.yaml  tailwind.config.js  tsconfig.app.json  update-schema.sh
ui/GainsTracker/: README.md  angular.json  output.css  package-lock.json  package.json
ui/GainsTracker/src/: index.html
ui/src/: App.css  App.tsx  index.css  index.scss  main.tsx  package-lock.json
ui/test/: CounterButton.ts
(+40 files in other folders)
